<resources>
    <string name="app_name">Pizza Code APP</string>
    <string name="hint_input_login">Username</string>
    <string name="hint_input_password">Password</string>
    <string name="button">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="pizza_code_logo">Pizza Code Logo</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="HasAccount">Log In to Existing Account</string>
    <string name="create_account">Create Account</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="compras">compras</string>
    <string name="item">Item</string>
    <string name="log_out">Log Out</string>
    <string name="see_stock">See Stock</string>
    <string name="remove_product">Remove Product</string>
    <string name="add_product">Add Product</string>
    <string name="name">Name</string>
    <string name="adding_product">ADDING PRODUCT</string>
    <string name="n_in_stock">nº in Stock</string>
    <string name="price">price</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
</resources>